--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,49 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.bold{
+  font-weight: bold;
+}
+.lighter{
+  font-weight: lighter;
+}
+/* .smaller{
+  font-size: 80%;
+} */
+
+.flex{
+  display: flex;
+  flex-direction:row;
+  
+}
+
+.invisible{
+  visibility: hidden;
+}
+
+.icon{
+  height: 2em;
+  width: 2em;
+  margin:auto;
+  padding: 5px
+}
+
+.fixIcon{
+  height: 1.5em;
+  width: 1.5em;
+  margin:auto;
+  padding: 5px
+}
+
+.blue{
+  color:rgba(0, 15, 222, 0.862)
+}
+html {
+
+  font-family: Georgia, 'Times New Roman', Times, serif;  
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -40,7 +86,15 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+button{
+  cursor: pointer;
+}
+.flex-box{
+  display: flexbox;
+  flex-wrap: wrap;
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -71,20 +125,20 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
+} */
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+/* 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -93,7 +147,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 a {
   color: inherit;
@@ -104,4 +158,7 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} 
+
+
+
