--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -295,3 +295,136 @@ body{
 .marginPastHeader{
   margin-top:  6em;
 }
+
+
+
+.blur{
+  // this isn't needed anymore, decided to do a backdrop-filter after I learned about it. Didn't have need for the useContext anymore.
+}
+
+.modalBackground{
+  position: fixed;
+  margin-top:-7em;
+  margin-left: -1em;
+  height: 100%;
+  width: 110%;
+  z-index: 1;
+  backdrop-filter:  blur(.25em) brightness(70%);
+  // filter: brightness(70%)
+}
+
+.modalBorder{
+  position:fixed;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+background-color: rgba(2,12,29);
+height: 75vh;
+width: 75vh;
+padding: 10px;
+border-radius: 10%;
+text-align: center;
+overflow-y: scroll;
+overflow-x: hidden;
+}
+
+
+.modal{
+  text-align: left;
+  background-color: white;
+  height: 80%;
+  width: 90%;
+  margin: auto;
+}
+
+.centerText{
+  margin:auto;  
+  text-align:center;
+}
+
+// Everything for my switch
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #bad7eb;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+.exitButton{
+  cursor: pointer;
+  text-align: right;
+  width: fit-content;
+  float: right;
+}
+
+input{
+  cursor: pointer;
+}
+
+input[type=submit] {
+  color: rgba(2,12,29);
+  	font-size: 1.5em;
+	display: inline-block;
+	font-family: Montserrat;
+	text-transform: uppercase;
+  border-radius: 5%;
+}
