changed my second photo

--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -123,7 +123,7 @@ width: 100%;
     margin-left: auto;
     margin-right: auto;
     width: 40ch;
-    background-image: url(../public/images/raftingJake.jpg);
+    background-image: url(../public/images/IMG_1309.jpg);
     text-align: center;
     height: 25vw;
     width: 40vw;
