--- a/components/Modal/modal.module.css
+++ b/components/Modal/modal.module.css
@@ -5,3 +5,59 @@
     grid-template-columns: 1fr .2fr;
     
 }
+
+
+
+
+
+.skeletonFrame{
+    border: solid black;
+    height:20vw;
+    width: 100%;
+    justify-content: center;
+}
+
+
+
+.centerBox{
+    
+    border: solid black;
+    height:10vh;
+    width: 10vh;
+    border-radius: 15%;
+ position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;        
+}
+
+
+.topLeftCircle{
+    border: solid black;
+    border-radius: 20%;
+    width: 8vh;
+    height:8vh;
+    position: absolute;
+    left:6vw
+}
+.topRightCircle{
+    border: solid black;
+    border-radius: 20%;
+    width: 8vh;
+    height:8vh;
+    position: absolute;
+    right: 5.5vw;
+}
+
+.referenceCircle{
+        border: solid black;
+    height:35vh;
+    width: 35vh;
+    border-radius: 100%;
+ position: relative;
+  top: 16%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;    
+}
