--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -442,3 +442,10 @@ input[type=submit] {
 .notthisgdSoG{
   margin: auto;
 }
+
+
+.hugeText{
+  font-size:4em;
+  font-weight: 900;
+  color: green;
+}
