--- a/pages/WebsiteEducation/EducationIntro.module.css
+++ b/pages/WebsiteEducation/EducationIntro.module.css
@@ -22,6 +22,11 @@
 .screen{
     overflow-y: scroll;
 }
+.screenGridHalf{
+    overflow-y: scroll;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
 .elements{
     overflow-y: scroll;
 }
@@ -111,4 +116,13 @@ border: solid blue;
 
 .notthis{
     margin: auto;
+}
+.slowColorChange{
+    transition: background-color 3s;
+}
+.greenBackground{
+    background-color: green;
+}
+.redBackgroundColor{
+    background-color: rgb(255,0,0,0.4);
 }
