updated site landing page and made the starting page more mobile friendly

--- a/components/layout/headerComponents/logo.module.css
+++ b/components/layout/headerComponents/logo.module.css
@@ -98,6 +98,15 @@ line-height: .01em;
     width: 1em;
   }
 
+
+  @media (max-width: 768px) {
+    .marginPastLogo{
+        display:none;
+    }
+    
+    
+  }
+
 /* 
 
 
