--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -1,5 +1,4 @@
 
-
 .educationSection{
     margin-left: 1%;
     width: 100%;
@@ -32,7 +31,7 @@
 }
 
 .up{
-    margin-top: -3.5%;
+    /* margin-top: -3.5%; */
 }
 
 .header{
@@ -120,6 +119,10 @@ width: 100%;
     margin-right: auto;
     width: 40ch;
     height: 25vw;
+    overflow: break-word;
+    text-overflow: ellipsis;
+    margin-left: -15px;
+
 
 
 }
@@ -143,6 +146,9 @@ width: 100%;
     justify-content: center;
     width: 40ch;
     height: 25vw;
+    overflow: break-word;
+    margin-left: 23px;
+
 
 }
 
@@ -170,4 +176,12 @@ width: 100%;
     column-gap: 3em;
     margin-top: 10em;
     margin-bottom: 10em;
+}
+
+
+@media (max-width: 768px) {
+    /* .frame2{
+        transform: translate(0,);
+    } */
+    
 }
