--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@media screen and (max-width:600px) {
+  .everythingInMain{
+      font-size: .8em;
+      transform: scale(.8);
+  }
+}
+
+
 .bold{
   font-weight: bold;
 }
@@ -385,6 +393,7 @@ overflow-x: hidden;
   transition: .4s;
 }
 
+
 input:checked + .slider {
   background-color: #2196F3;
 }
@@ -449,3 +458,95 @@ input[type=submit] {
   font-weight: 900;
   color: green;
 }
+
+
+
+svg{
+  position: absolute;
+  top:0;
+  left:0;
+  height: 100vh;
+  width: 100%;
+}
+
+#impresarioTitle{
+  font-size: 120px;
+  letter-spacing: 16px;
+  text-transform: uppercase;
+  font-family: Raleway;
+  text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);
+
+}
+
+#bg-video{
+  margin:-200px auto;
+  overflow: hidden;
+  width: 100%; 
+  height: 100vh; 
+  scale: 1.4;
+  
+}
+#impresarioSubTitle{
+  font-size: 60px;
+  font-family: Raleway;
+  text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);
+}
+.pxSpacer{
+  height: 205px;
+}
+
+
+#mask-bg{
+  mask:url("#mask");
+  fill:rgb(255, 255, 255);
+  y:15%;
+
+  
+}
+
+#siteIntroductoryStatement{
+  font-size: 2.5em;
+  font-family: Raleway;
+}
+.findOutMoreButton{
+  top:65%;
+  left: 60%;
+  transform: translate(-50%);
+  z-index: 2;
+  position: absolute;
+}
+
+@media (max-width: 768px) {
+  /* CSS styles for phone-sized screens */
+  #impresarioTitle {
+    font-size: 40px; /* Adjust the font size for smaller screens */
+    letter-spacing: 6px; /* Adjust the letter-spacing for smaller screens */
+ text-shadow: 3px 3px 3px rgba(0, 0, 0, .2);  
+}
+  #impresarioSubTitle {
+    font-size: 20px; /* Adjust the font size for smaller screens */
+ text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  }
+  #siteIntroductoryStatement{
+    font-size: .9em;
+  }
+  #myIntroPhoto{
+    scale: .6;
+    transform: translate(65%, 25%);
+  }
+  .theTextForLandingPage{
+    scale:.7;
+    transform: translate(15%,40%);
+
+  }
+  .findOutMoreButton{
+    scale:.6;
+    transform: translate(-99%,70%);
+  }
+.goLeftPhone{
+  margin-left: -34px;
+}
+
+}
+
+
