optomize for mobile

--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -107,7 +107,7 @@ width: 100%;
     justify-content: center;
     text-align: center;
     height: 25vw;
-    width: 40vw;
+    width: 30vw;
     background-image: url(../public/images/jake\ fancy.jpg);
     background-size: cover;
     background-position: center;
@@ -142,9 +142,10 @@ width: 100%;
 .lowerLeft{
     grid-area: left;
     margin-left: auto;
+    padding-left: 1em;
     margin-right: auto;
     justify-content: center;
-    width: 40ch;
+    width: 30ch;
     height: 25vw;
     overflow: break-word;
     margin-left: 23px;
