--- a/pages/Buy/BuildSite/BuildSite.module.css
+++ b/pages/Buy/BuildSite/BuildSite.module.css
@@ -7,6 +7,8 @@
     
 }
 
+
+
 .card{
     display: grid;
     border: solid white;
@@ -30,4 +32,20 @@
 
 .listAttention{
     background-color: rgb(247, 222, 197);
+}
+
+
+
+
+
+@media (max-width: 768px) {
+    .boundary {
+        /* grid-template-columns: 100%; */
+        width: 100%;
+        display:flex;
+        flex-direction: column;
+    }
+    .card:nth-child(1){
+        order:2;
+    }
 }
