--- a/pages/WebsiteEducation/EducationIntro.module.css
+++ b/pages/WebsiteEducation/EducationIntro.module.css
@@ -126,3 +126,19 @@ border: solid blue;
 .redBackgroundColor{
     background-color: rgb(255,0,0,0.4);
 }
+
+@media screen and (max-width: 768px) {
+    
+    .boundary {
+        width: 100%;
+        display:flex;
+        flex-direction: column;
+    }
+    .noPlay::before{
+        content: "This game is not optimized for mobile";
+        font-size: 20px;
+        color: red;
+        font-style:oblique;
+        font-weight: bold;
+    }
+}
