--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -559,3 +559,60 @@ svg{
   color: red;
   background-color: red;
 }
+
+
+.messageContainer {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 0;
+}
+
+.userMessage {
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: rgba(63, 63, 170, 0.46);
+  margin-top: 10px; /* Add margin-top for separation */
+  border-radius: 10px; /* Adjust the radius as needed */
+  float: left; /* Float user messages to the left */
+  clear: both;
+
+}
+
+.adminMessage {
+  margin-bottom: 10px;
+  padding: 10px;
+  margin-top: 10px; /* Add margin-top for separation */
+  background-color: rgba(218, 151, 151, 0.597);
+  border-radius: 10px; /* Adjust the radius as needed */
+  float: right;
+  clear:both;
+}
+
+
+
+.chatIcon{
+  position: fixed;
+  margin-top: 90vh;
+  margin-left:93vw;
+  width: 3rem;
+  height: 3rem;
+  color:  #ce6d6d; /* Set the desired background color */
+  border-radius: 50%; /* Optional: To make it circular */
+  padding: 1rem; /* Optional: Adjust padding as needed */
+  cursor: pointer; /* Optional: Add a pointer cursor for better usability */
+  animation: bounce 2s infinite;
+
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-5px);
+  }
+  60% {
+    transform: translateY(-2px);
+  }
+}
