--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -102,16 +102,17 @@ width: 100%;
 
 .left{
     grid-area: left;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: center;
-    text-align: center;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    /* justify-content: center; */
+    /* text-align: center; */
     height: 25vw;
     width: 30vw;
     background-image: url(../public/images/jake\ fancy.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 20%;
+    float: right;
 }
 .right{
     grid-area: right;
@@ -128,27 +129,30 @@ width: 100%;
 }
 .lowerRight{
     grid-area: right;
-    margin-left: auto;
+    margin-left: -2%;
     margin-right: auto;
-    width: 40ch;
     background-image: url(../public/images/IMG_1309.jpg);
     text-align: center;
     height: 25vw;
-    width: 40vw;
+    width: 30vw;
     background-size: cover;
     background-position: center;
     border-radius: 20%;
+
 }
 .lowerLeft{
     grid-area: left;
     margin-left: auto;
     padding-left: 1em;
-    margin-right: auto;
+    /* margin-right: auto; */
     justify-content: center;
-    width: 30ch;
+    min-width: 30ch;
+    max-width: 45ch;
+    
     height: 25vw;
     overflow: break-word;
-    margin-left: 23px;
+    float: right; 
+    margin-right: 2%
 
 
 }
@@ -176,7 +180,7 @@ width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 3em;
     margin-top: 10em;
-    margin-bottom: 10em;
+    margin-bottom: 5em;
 }
 
 
