--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -483,7 +483,8 @@ svg{
   overflow: hidden;
   width: 100%; 
   height: 100vh; 
-  scale: 1.4;
+  scale: 1;
+  transform: translateY(10vw); /* Move the video down by 2% of its own height */
   
 }
 #impresarioSubTitle{
@@ -494,20 +495,35 @@ svg{
 .pxSpacer{
   height: 250px;
 }
+.smallpxSpacer{
+  height: 75px;
+}
+.gradientOverlay{
+  
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 10%);
+    pointer-events: none; /* Ensures that the overlay doesn't interfere with mouse events */
+  
+}
+
+
 
 
 #mask-bg{
   mask:url("#mask");
   fill:rgb(255, 255, 255);
   y:15%;
-  height:100%;
+  height:70vh;
   width:100vw;
   rx:100;
   ry:100;
 }
-.banner{
-  
-}
+
+
 
 
 @media(min-width: 1000px){
@@ -516,9 +532,24 @@ svg{
     x:15%;
   }
 
+
   #myIntroPhoto{
     cx:30vw;
   }
+  #bg-video{
+    width:50%;
+    margin-left: 25%;
+    transform: translateY(3vw); /* Move the video down by 2% of its own height */
+    scale:.8
+    
+
+
+  }
+  .landingContainer{
+    // padding-top: 6%;
+
+  }
+
 }
 
 #siteIntroductoryStatement{
@@ -548,16 +579,16 @@ svg{
 @media (max-width: 768px) {
   /* CSS styles for phone-sized screens */
   #impresarioTitle {
-    font-size: 40px; /* Adjust the font size for smaller screens */
+    font-size: 50px; /* Adjust the font size for smaller screens */
     letter-spacing: 6px; /* Adjust the letter-spacing for smaller screens */
  text-shadow: 3px 3px 3px rgba(0, 0, 0, .2);  
 }
   #impresarioSubTitle {
-    font-size: 20px; /* Adjust the font size for smaller screens */
+    font-size: 40px; /* Adjust the font size for smaller screens */
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   }
   #siteIntroductoryStatement{
-    font-size: .9em;
+    font-size: 1em;
   }
   #myIntroPhoto{
     scale: .6;
@@ -583,6 +614,9 @@ svg{
   width: 2rem;
   height: 2rem;
 
+}
+#bg-video{
+  transform: translate(3vw)
 }
 
 }
